--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/William-Fernandes252/Mapty#readme",
     "devDependencies": {
+        "@types/leaflet": "^1.7.10",
         "css-loader": "^6.7.1",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0",
@@ -27,5 +28,8 @@
         "typescript": "^4.6.4",
         "webpack": "^5.72.1",
         "webpack-cli": "^4.9.2"
+    },
+    "dependencies": {
+        "leaflet": "^1.8.0"
     }
 }
