--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/geojson": "^7946.0.8",
         "@types/leaflet": "^1.7.10",
         "css-loader": "^6.7.1",
+        "file-loader": "^6.2.0",
         "sass": "^1.52.1",
         "sass-loader": "^13.0.0",
         "style-loader": "^3.3.1",
