--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "homepage": "https://github.com/William-Fernandes252/Mapty#readme",
     "devDependencies": {
         "@types/geojson": "^7946.0.8",
+        "@types/jquery": "^3.5.14",
         "@types/leaflet": "^1.7.10",
         "css-loader": "^6.7.1",
         "file-loader": "^6.2.0",
@@ -32,6 +33,7 @@
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "jquery": "^3.6.0",
         "leaflet": "^1.8.0"
     }
 }
