--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "jquery": "^3.6.0",
-        "leaflet": "^1.8.0"
+        "leaflet": "^1.8.0",
+        "uuid": "^8.3.2"
     }
 }
